syntax = "proto3";

package saas.v1alpha1;

option go_package = "github.com/cisco-eti/phoenix-saas-be/api/saas/v1alpha1";

import "google/api/annotations.proto";
import "saas/v1alpha1/record.proto";
import "saas/v1alpha1/record_id.proto";

message GetRecordRequest {
  RecordIdentifier id = 1;
}

message GetRecordResponse {
  Record record = 1;
}

message DeleteRecordRequest {
  RecordIdentifier id = 1;
}

message DeleteRecordResponse {}

// These APIs are primarily intended for UI interactions. Their implementations should not interact with the Agent Directory service.
service RecordHubService {
  rpc GetRecord(GetRecordRequest) returns (GetRecordResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/records/ref/{id.digest}"
      // additional_bindings: {get: "/v1alpha1/records/{id.repo_version_id.repository_name}/{id.repo_version_id.version}"}
    };
  }

  rpc DeleteRecord(DeleteRecordRequest) returns (DeleteRecordResponse) {
    option (google.api.http) = {
      delete: "/v1alpha1/records/ref/{id.digest}"
      // additional_bindings: {delete: "/v1alpha1/records/{id.repo_version_id.repository_name}/{id.repo_version_id.version}"}
    };
  }
}
